--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZUZ Kognitivtrainer</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Kognitive Trainingsapp</title>
 </head>
 <body>
-    <div class="container">
-        <h1>ZUZ Kognitivtrainer</h1>
-        <button onclick="startModule('memory')">🧠 Merkfähigkeit</button>
-        <button onclick="startModule('reaction')">⚡ Reaktionstest</button>
-        <button onclick="startModule('math')">➕ Kopfrechnen</button>
-        <button onclick="startModule('goNoGo')">🚦 Go/No-Go</button>
-        <button onclick="startModule('pattern')">🔢 Muster erkennen</button>
-        <div id="app"></div>
-    </div>
+    <h1>Kognitive Tests</h1>
+    <button onclick="startModule('memory')">Zahl merken</button>
+    <button onclick="startModule('reaction')">Reaktionstest</button>
+    <button onclick="startModule('math')">Kopfrechnen</button>
+    <button onclick="startModule('goNoGo')">Go / No-Go</button>
+    <button onclick="startModule('pattern')">Zahlenmuster</button>
+    <div id="app"></div>
     <script src="script.js"></script>
 </body>
 </html>
